src/components/keyboard/keyboard.css
/* @import '../../index.css';*/

#keyboard-container {
  display: flex;
}

#keyboard-inner {
  margin: auto auto;
}

.key {
  width: 50px;
  height: 50px;
  border: thin solid white;
  display: flex;
  border-radius: 100%;
  position: absolute;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-tap-highlight-color: transparent;
  touch-action: manipulation;
}

.text {
  margin: auto auto;
  pointer-events: none;
}

@media (pointer:fine) {
  .touchscreen {
    display: none;
  }
}

@media (pointer:coarse) {
  .computer {
    display: none;
  }
}

